--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
 </section>
 
 <section id="about">
+  <object type="image/svg+xml" class="bg light d-md-none" data="assets/backgrounds/home_about_circle.svg"></object>
   <div class="container d-flex flex-column align-items-md-center">
     <h2 class="text-center">About us</h2>
     <p class="text-center">We are a direct advertiser and an online gambling affiliate program. MEGAPARTNERS guarantees the stability and reliability of all processes for our affiliates and players.</p>
@@ -304,10 +305,11 @@
       </div>
     </div>
   </div>
+  <object class="bg pattern d-md-none w-100 mt-5" type="image/svg+xml" data="assets/backgrounds/home_brands_banner_bottom.svg"></object>
 </section>
 
 <section id="commissions">
-  <object class="bg coins" type="image/svg+xml" data="assets/backgrounds/commissions_coins.svg"></object>
+  <object class="bg coins d-none d-md-block" type="image/svg+xml" data="assets/backgrounds/commissions_coins.svg"></object>
   <object class="bg light" type="image/svg+xml" data="assets/backgrounds/commissions_light.svg"></object>
   <div class="container">
     <h2 class="text-center">Commissions</h2>
@@ -371,6 +373,8 @@
 </section>
 
 <section id="events">
+  <object class="bg circle-bottom d-none d-md-block" type="image/svg+xml" data="assets/backgrounds/home_events_bottom_circle.svg"></object>
+  <object class="bg circle d-md-none" type="image/svg+xml" data="assets/backgrounds/home_events_circle.svg"></object>
   <div class="container">
     <h2 class="text-center mb-5">Events</h2>
     <div class="splide" aria-label="...">
@@ -434,7 +438,9 @@
   </div>
 </section>
 
-<section>
+<section id="subscribe">
+  <object class="bg circle-desktop d-none d-md-block" type="image/svg+xml" data="assets/backgrounds/home_subscribe_circle-desktop.svg"></object>
+  <object class="bg circle d-md-none" type="image/svg+xml" data="assets/backgrounds/home_subscribe_circle.svg"></object>
   <div class="container">
     <h2 class="text-center">Subscribe to our newsletter</h2>
     <p class="text-center">We'll send to you our special offers and  industry newsbreaks.</p>
@@ -451,8 +457,9 @@
 </section>
 
 <section id="faq">
-  <object class="bg coins_left" type="image/svg+xml" data="assets/backgrounds/faq_left.svg"></object>
-  <object class="bg coins_right" type="image/svg+xml" data="assets/backgrounds/faq_right.svg"></object>
+  <object class="bg mobile-pattern d-md-none" type="image/svg+xml" data="assets/backgrounds/faq_mobile.svg"></object>
+  <object class="bg coins_left d-none d-md-block" type="image/svg+xml" data="assets/backgrounds/faq_left.svg"></object>
+  <object class="bg coins_right d-none d-md-block" type="image/svg+xml" data="assets/backgrounds/faq_right.svg"></object>
   <div class="container">
     <h2 class="text-center mb-5">FAQ</h2>
     <div class="container">
@@ -487,13 +494,14 @@
 </section>
 
 <section id="contact">
+  <object class="bg mobile-pattern d-md-none" type="image/svg+xml" data="assets/backgrounds/home_contact_top_pattern.svg"></object>
   <div class="container">
-    <h2 class="text-center">Contact us</h2>
-    <div class="container">
+    <h2 class="text-center mb-4 mb-md-0">Contact us</h2>
+    <div class="container pt-4 pt-md-0">
       <form action="#" class="thick-bordered py-5 my-5">
         <div class="container d-flex flex-column align-items-center">
           <header class="d-flex flex-column align-items-center">
-            <h4>Let’s start a conversation!</h4>
+            <h4 class="mb-4 mb-md-2">Let’s start a conversation!</h4>
             <span>Would you like to start cooperation with MEGAPARTNERS in any field? Drop us a line!</span>
           </header>
           <div class="mt-5 w-100">
