--- a/index.html
+++ b/index.html
@@ -498,7 +498,7 @@
   <div class="container">
     <h2 class="text-center mb-4 mb-md-0">Contact us</h2>
     <div class="container pt-4 pt-md-0">
-      <form action="#" class="thick-bordered py-5 my-5">
+      <form class="thick-bordered py-5 my-5">
         <div class="container d-flex flex-column align-items-center">
           <header class="d-flex flex-column align-items-center">
             <h4 class="mb-4 mb-md-2">Let’s start a conversation!</h4>
@@ -510,24 +510,37 @@
                 <div class="input">
                   <input placeholder="Your name..." type="text">
                   <span>Name:</span>
+                  <div class="error-text"></div>
                 </div>
               </li>
               <li class="mt-3 mt-md-0">
                 <div class="input">
                   <input placeholder="Your email..." type="email">
                   <span>Email:</span>
+                  <div class="error-text"></div>
                 </div>
               </li>
               <li class="mt-3 mt-md-0">
-                <div class="input">
-                  <input placeholder="In progress..." type="text">
-                  <span>In progress...:</span>
+                <div id="dropdown-wrapper" class="dropdown-wrapper input bordered" tabindex="1">
+                  <span class="dropdown-value">Choose one...</span>
+
+                  <ul class="dropdown-list">
+                    <li>Marketing</li>
+                    <li>Backoffice</li>
+                    <li>IT</li>
+                    <li>Analytics</li>
+                    <li>Product</li>
+                    <li>Support</li>
+                  </ul>
+                  <span class="dropdown-title">Subject:</span>
+                  <div class="error-text"></div>
                 </div>
              </li>
             </ul>
             <div class="input textarea mt-3">
               <textarea rows="4" placeholder="Message..." type="text" ></textarea>
               <span>Message:</span>
+              <div class="error-text"></div>
             </div>
             <button class="cta-btn mt-3">Send a message</button>
           </div>
