--- a/index.html
+++ b/index.html
@@ -69,7 +69,28 @@
 </aside>
 
 <section id="hero" class="d-flex align-items-center">
-  <div class="shadow"></div>
+  <div class="shadow d-none d-md-flex justify-content-center">
+    <div class="animation-bg mx-auto d-flex ">
+      <div class="left d-flex flex-column">
+        <object type="image/svg+xml" data="assets/backgrounds/hero_animation_center.svg"></object>
+        <object type="image/svg+xml" data="assets/backgrounds/hero_animation_center.svg"></object>
+        <object type="image/svg+xml" data="assets/backgrounds/hero_animation_center.svg"></object>
+        <object type="image/svg+xml" data="assets/backgrounds/hero_animation_center.svg"></object>
+      </div>
+      <div class="center d-flex mx-3 flex-column">
+        <object type="image/svg+xml" data="assets/backgrounds/hero_animation_center.svg"></object>
+        <object type="image/svg+xml" data="assets/backgrounds/hero_animation_center.svg"></object>
+        <object type="image/svg+xml" data="assets/backgrounds/hero_animation_center.svg"></object>
+        <object type="image/svg+xml" data="assets/backgrounds/hero_animation_center.svg"></object>
+      </div>
+      <div class="right d-flex flex-column">
+        <object type="image/svg+xml" data="assets/backgrounds/hero_animation_center.svg"></object>
+        <object type="image/svg+xml" data="assets/backgrounds/hero_animation_center.svg"></object>
+        <object type="image/svg+xml" data="assets/backgrounds/hero_animation_center.svg"></object>
+        <object type="image/svg+xml" data="assets/backgrounds/hero_animation_center.svg"></object>
+      </div>
+    </div>
+  </div>
   <object type="image/svg+xml" class="bg light" data="assets/backgrounds/hero-light.svg"></object>
   <object type="image/svg+xml" class="bg circle d-none d-md-block" data="assets/backgrounds/hero_circle.svg"></object>
   <div class="container py-5 d-flex flex-column flex-md-row justify-content-between align-items-center">
@@ -80,11 +101,6 @@
       <p>Raise your ROI with direct advertiser</p>
       <button class="cta-btn">Become a partner</button>
     </div>
-<!--    <div class="animation-bg d-flex flex-column mx-auto">-->
-<!--      <object type="image/svg+xml" data="assets/backgrounds/hero_animation_center.svg"></object>-->
-<!--      <object type="image/svg+xml" data="assets/backgrounds/hero_animation_center.svg"></object>-->
-<!--      <object type="image/svg+xml" data="assets/backgrounds/hero_animation_center.svg"></object>-->
-<!--    </div>-->
     <div class="blog-container">
       <h3>Blog</h3>
       <div id="blog" class="d-none d-md-flex" data-simplebar data-simplebar-auto-hide="false" data-simplebar-click-on-track="false">
