--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
   </div>
 </aside>
 
-<section id="hero" class="d-flex align-items-center">
+<section id="hero" class="d-flex flex-column flex-md-row align-items-center">
   <div class="shadow d-none d-md-flex justify-content-center">
     <div class="animation-bg mx-auto d-flex ">
       <div class="left d-flex flex-column">
@@ -101,7 +101,7 @@
       <p>Raise your ROI with direct advertiser</p>
       <button class="cta-btn">Become a partner</button>
     </div>
-    <div class="blog-container">
+    <div class="blog-container d-none d-md-block">
       <h3>Blog</h3>
       <div id="blog" class="d-none d-md-flex" data-simplebar data-simplebar-auto-hide="false" data-simplebar-click-on-track="false">
         <div class="card tinted">
@@ -127,6 +127,7 @@
       </div>
     </div>
   </div>
+  <object type="image/svg+xml" class="d-block d-md-none bg hero-pattern w-100" data="assets/backgrounds/home_top_pattern.svg"></object>
 </section>
 
 <section id="about">
@@ -490,6 +491,54 @@
     <h2 class="text-center mb-5">FAQ</h2>
     <div class="container">
       <ul class="d-flex flex-column">
+        <li class="accordion-container bordered flex-column">
+          <div class="d-flex justify-content-between align-items-center">
+            <div class="accordion__intro">How to register on the site?</div>
+            <div class="cross-icon">
+              <svg width="22" height="22" viewBox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M10 12V22H12V12H22V10H12V0H10V10H0V12H10Z" fill="white"/>
+              </svg>
+            </div>
+          </div>
+          <div class="accordion__content">
+            Check your Spam folder. To prevent possible problems with the delivery of service messages, add our email address from which letters come to your contact list. We also advise you to check if you entered your email address correctly when registering on the website and contact support.          </div>
+        </li>
+        <li class="accordion-container bordered flex-column">
+          <div class="d-flex justify-content-between align-items-center">
+            <div class="accordion__intro">How to register on the site?</div>
+            <div class="cross-icon">
+              <svg width="22" height="22" viewBox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M10 12V22H12V12H22V10H12V0H10V10H0V12H10Z" fill="white"/>
+              </svg>
+            </div>
+          </div>
+          <div class="accordion__content">
+            Check your Spam folder. To prevent possible problems with the delivery of service messages, add our email address from which letters come to your contact list. We also advise you to check if you entered your email address correctly when registering on the website and contact support.          </div>
+        </li>
+        <li class="accordion-container bordered flex-column">
+          <div class="d-flex justify-content-between align-items-center">
+            <div class="accordion__intro">How to register on the site?</div>
+            <div class="cross-icon">
+              <svg width="22" height="22" viewBox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M10 12V22H12V12H22V10H12V0H10V10H0V12H10Z" fill="white"/>
+              </svg>
+            </div>
+          </div>
+          <div class="accordion__content">
+            Check your Spam folder. To prevent possible problems with the delivery of service messages, add our email address from which letters come to your contact list. We also advise you to check if you entered your email address correctly when registering on the website and contact support.          </div>
+        </li>
+        <li class="accordion-container bordered flex-column">
+          <div class="d-flex justify-content-between align-items-center">
+            <div class="accordion__intro">How to register on the site?</div>
+            <div class="cross-icon">
+              <svg width="22" height="22" viewBox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M10 12V22H12V12H22V10H12V0H10V10H0V12H10Z" fill="white"/>
+              </svg>
+            </div>
+          </div>
+          <div class="accordion__content">
+            Check your Spam folder. To prevent possible problems with the delivery of service messages, add our email address from which letters come to your contact list. We also advise you to check if you entered your email address correctly when registering on the website and contact support.          </div>
+        </li>
         <li class="accordion-container bordered flex-column">
           <div class="d-flex justify-content-between align-items-center">
             <div class="accordion__intro">How to register on the site?</div>
