--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
 
 <section id="hero" class="d-flex flex-column flex-md-row align-items-center">
   <div class="shadow d-none d-md-flex justify-content-center">
+    <div class="gradient"></div>
     <div class="animation-bg mx-auto d-flex ">
       <div class="left d-flex flex-column">
         <object type="image/svg+xml" data="assets/backgrounds/hero_animation_center.svg"></object>
@@ -106,23 +107,23 @@
       <div id="blog" class="d-none d-md-flex" data-simplebar data-simplebar-auto-hide="false" data-simplebar-click-on-track="false">
         <div class="card tinted">
           <div>Payment methods: Skrill, Neteller, webmoney, Bank transfer</div>
-          <small class="mt-4">10.02.2023</small>
+          <small class="mt-3 d-block">10.02.2023</small>
         </div>
         <div class="card tinted">
           <div>Payment methods: Skrill, Neteller, webmoney, Bank transfer</div>
-          <small class="mt-4">10.02.2023</small>
+          <small class="mt-3 d-block">10.02.2023</small>
         </div>
         <div class="card tinted">
           <div>Payment methods: Skrill, Neteller, webmoney, Bank transfer</div>
-          <small class="mt-4">10.02.2023</small>
+          <small class="mt-3 d-block">10.02.2023</small>
         </div>
         <div class="card tinted">
           <div>Payment methods: Skrill, Neteller, webmoney, Bank transfer</div>
-          <small class="mt-4">10.02.2023</small>
+          <small class="mt-3 d-block">10.02.2023</small>
         </div>
         <div class="card tinted">
           <div>Payment methods: Skrill, Neteller, webmoney, Bank transfer</div>
-          <small class="mt-4">10.02.2023</small>
+          <small class="mt-3 d-block">10.02.2023</small>
         </div>
       </div>
     </div>
