lock careers modal window

--- a/careers.html
+++ b/careers.html
@@ -479,51 +479,51 @@
   </div>
 </footer>
 
-<div class="modal-window justify-content-center align-items-center">
-  <div class="content l thick-bordered d-flex flex-column align-items-center p-4">
-    <svg class="modal-close" width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
-      <rect width="40" height="40" rx="20" fill="#478BF9"/>
-      <g clip-path="url(#clip0_506_8776)">
-        <path fill-rule="evenodd" clip-rule="evenodd" d="M19.9996 22.1206L25.3026 27.4246C25.584 27.706 25.9657 27.8641 26.3636 27.8641C26.7616 27.8641 27.1432 27.706 27.4246 27.4246C27.706 27.1432 27.8641 26.7616 27.8641 26.3636C27.8641 25.9657 27.706 25.584 27.4246 25.3026L22.1196 19.9996L27.4236 14.6966C27.5629 14.5573 27.6733 14.3919 27.7487 14.2099C27.824 14.0278 27.8628 13.8328 27.8627 13.6358C27.8627 13.4388 27.8238 13.2437 27.7484 13.0617C27.673 12.8797 27.5624 12.7144 27.4231 12.5751C27.2838 12.4359 27.1184 12.3254 26.9364 12.2501C26.7543 12.1747 26.5592 12.1359 26.3623 12.136C26.1653 12.136 25.9702 12.1749 25.7882 12.2503C25.6062 12.3258 25.4409 12.4363 25.3016 12.5756L19.9996 17.8786L14.6966 12.5756C14.5583 12.4323 14.3928 12.3179 14.2099 12.2392C14.0269 12.1605 13.8301 12.1191 13.6309 12.1173C13.4318 12.1154 13.2342 12.1533 13.0498 12.2286C12.8655 12.304 12.6979 12.4153 12.557 12.556C12.4161 12.6968 12.3047 12.8642 12.2292 13.0485C12.1536 13.2328 12.1156 13.4303 12.1172 13.6295C12.1189 13.8287 12.1602 14.0255 12.2387 14.2086C12.3172 14.3916 12.4314 14.5572 12.5746 14.6956L17.8796 19.9996L12.5756 25.3026C12.2942 25.584 12.1361 25.9657 12.1361 26.3636C12.1361 26.7616 12.2942 27.1432 12.5756 27.4246C12.857 27.706 13.2387 27.8641 13.6366 27.8641C14.0346 27.8641 14.4162 27.706 14.6976 27.4246L19.9996 22.1196V22.1206Z" fill="white"/>
-      </g>
-      <defs>
-        <clipPath id="clip0_506_8776">
-          <rect width="24" height="24" fill="white" transform="translate(8 8)"/>
-        </clipPath>
-      </defs>
-    </svg>
-    <h4 class="text-center">PPC Specialist Mobile App</h4>
-    <div class="info"></div>
-    <div class="description my-3">
-      <p>Develop a strategy for measuring all campaign activities, including creating and maintaining automated reporting dashboards and fulfilling ad-hoc marketing team reporting requests;
-        Tracking marketing campaigns through all communication channels on an ongoing basis;
-        Regularly reporting on KPIs of the marketing department and preparing reports;
-        Providing insights and strategic recommendations to help create best-in-class marketing experiences across B2B & B2C activities;
-        Analysis of external and internal business environment: competitors, market trends, marketing, sales funnel conversions, etc.
-      </p>
-      <p>Develop a strategy for measuring all campaign activities, including creating and maintaining automated reporting dashboards and fulfilling ad-hoc marketing team reporting requests;
-        Tracking marketing campaigns through all communication channels on an ongoing basis;
-        Regularly reporting on KPIs of the marketing department and preparing reports;
-        Providing insights and strategic recommendations to help create best-in-class marketing experiences across B2B & B2C activities;
-        Analysis of external and internal business environment: competitors, market trends, marketing, sales funnel conversions, etc.
-      </p>
-      <p>Develop a strategy for measuring all campaign activities, including creating and maintaining automated reporting dashboards and fulfilling ad-hoc marketing team reporting requests;
-        Tracking marketing campaigns through all communication channels on an ongoing basis;
-        Regularly reporting on KPIs of the marketing department and preparing reports;
-        Providing insights and strategic recommendations to help create best-in-class marketing experiences across B2B & B2C activities;
-        Analysis of external and internal business environment: competitors, market trends, marketing, sales funnel conversions, etc.
-      </p>
-    </div>
-    <div class="actions d-flex w-100">
-      <button class="btn me-3">
-        <svg width="28" height="14" viewBox="0 0 28 14" fill="none" xmlns="http://www.w3.org/2000/svg">
-          <path d="M3.27799 6.17301C3.65133 4.21301 5.49133 2.86634 7.49133 2.86634H11.398C12.0913 2.86634 12.6647 2.29301 12.6647 1.59967C12.6647 0.906341 12.0913 0.333008 11.398 0.333008H7.62466C4.14466 0.333008 1.03799 2.87967 0.704659 6.34634C0.612475 7.27198 0.71522 8.20666 1.00627 9.09017C1.29733 9.97368 1.77023 10.7864 2.39453 11.476C3.01882 12.1656 3.78065 12.7168 4.63094 13.0941C5.48122 13.4713 6.40111 13.6663 7.33133 13.6663H11.398C12.0913 13.6663 12.6647 13.093 12.6647 12.3997C12.6647 11.7063 12.0913 11.133 11.398 11.133H7.33133C6.71889 11.1311 6.11447 10.9936 5.56151 10.7303C5.00855 10.467 4.52077 10.0845 4.13323 9.61031C3.74569 9.13608 3.468 8.58189 3.32013 7.98757C3.17225 7.39325 3.15786 6.77355 3.27799 6.17301ZM9.99799 8.33301H17.998C18.7313 8.33301 19.3313 7.73301 19.3313 6.99967C19.3313 6.26634 18.7313 5.66634 17.998 5.66634H9.99799C9.26466 5.66634 8.66466 6.26634 8.66466 6.99967C8.66466 7.73301 9.26466 8.33301 9.99799 8.33301ZM20.3713 0.333008H16.598C15.9047 0.333008 15.3313 0.906341 15.3313 1.59967C15.3313 2.29301 15.9047 2.86634 16.598 2.86634H20.5047C22.5047 2.86634 24.3447 4.21301 24.718 6.17301C24.8381 6.77355 24.8237 7.39325 24.6759 7.98757C24.528 8.58189 24.2503 9.13608 23.8628 9.61031C23.4752 10.0845 22.9874 10.467 22.4345 10.7303C21.8815 10.9936 21.2771 11.1311 20.6647 11.133H16.598C15.9047 11.133 15.3313 11.7063 15.3313 12.3997C15.3313 13.093 15.9047 13.6663 16.598 13.6663H20.6647C24.558 13.6663 27.678 10.3197 27.3047 6.34634C26.9713 2.87967 23.8513 0.333008 20.3713 0.333008Z" fill="#478BF9"/>
-        </svg>
-      </button>
-      <button class="cta-btn flex-grow-1">Apply this position</button>
-    </div>
-  </div>
-</div>
+<!--<div class="modal-window justify-content-center align-items-center">-->
+<!--  <div class="content l thick-bordered d-flex flex-column align-items-center p-4">-->
+<!--    <svg class="modal-close" width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">-->
+<!--      <rect width="40" height="40" rx="20" fill="#478BF9"/>-->
+<!--      <g clip-path="url(#clip0_506_8776)">-->
+<!--        <path fill-rule="evenodd" clip-rule="evenodd" d="M19.9996 22.1206L25.3026 27.4246C25.584 27.706 25.9657 27.8641 26.3636 27.8641C26.7616 27.8641 27.1432 27.706 27.4246 27.4246C27.706 27.1432 27.8641 26.7616 27.8641 26.3636C27.8641 25.9657 27.706 25.584 27.4246 25.3026L22.1196 19.9996L27.4236 14.6966C27.5629 14.5573 27.6733 14.3919 27.7487 14.2099C27.824 14.0278 27.8628 13.8328 27.8627 13.6358C27.8627 13.4388 27.8238 13.2437 27.7484 13.0617C27.673 12.8797 27.5624 12.7144 27.4231 12.5751C27.2838 12.4359 27.1184 12.3254 26.9364 12.2501C26.7543 12.1747 26.5592 12.1359 26.3623 12.136C26.1653 12.136 25.9702 12.1749 25.7882 12.2503C25.6062 12.3258 25.4409 12.4363 25.3016 12.5756L19.9996 17.8786L14.6966 12.5756C14.5583 12.4323 14.3928 12.3179 14.2099 12.2392C14.0269 12.1605 13.8301 12.1191 13.6309 12.1173C13.4318 12.1154 13.2342 12.1533 13.0498 12.2286C12.8655 12.304 12.6979 12.4153 12.557 12.556C12.4161 12.6968 12.3047 12.8642 12.2292 13.0485C12.1536 13.2328 12.1156 13.4303 12.1172 13.6295C12.1189 13.8287 12.1602 14.0255 12.2387 14.2086C12.3172 14.3916 12.4314 14.5572 12.5746 14.6956L17.8796 19.9996L12.5756 25.3026C12.2942 25.584 12.1361 25.9657 12.1361 26.3636C12.1361 26.7616 12.2942 27.1432 12.5756 27.4246C12.857 27.706 13.2387 27.8641 13.6366 27.8641C14.0346 27.8641 14.4162 27.706 14.6976 27.4246L19.9996 22.1196V22.1206Z" fill="white"/>-->
+<!--      </g>-->
+<!--      <defs>-->
+<!--        <clipPath id="clip0_506_8776">-->
+<!--          <rect width="24" height="24" fill="white" transform="translate(8 8)"/>-->
+<!--        </clipPath>-->
+<!--      </defs>-->
+<!--    </svg>-->
+<!--    <h4 class="text-center">PPC Specialist Mobile App</h4>-->
+<!--    <div class="info"></div>-->
+<!--    <div class="description my-3">-->
+<!--      <p>Develop a strategy for measuring all campaign activities, including creating and maintaining automated reporting dashboards and fulfilling ad-hoc marketing team reporting requests;-->
+<!--        Tracking marketing campaigns through all communication channels on an ongoing basis;-->
+<!--        Regularly reporting on KPIs of the marketing department and preparing reports;-->
+<!--        Providing insights and strategic recommendations to help create best-in-class marketing experiences across B2B & B2C activities;-->
+<!--        Analysis of external and internal business environment: competitors, market trends, marketing, sales funnel conversions, etc.-->
+<!--      </p>-->
+<!--      <p>Develop a strategy for measuring all campaign activities, including creating and maintaining automated reporting dashboards and fulfilling ad-hoc marketing team reporting requests;-->
+<!--        Tracking marketing campaigns through all communication channels on an ongoing basis;-->
+<!--        Regularly reporting on KPIs of the marketing department and preparing reports;-->
+<!--        Providing insights and strategic recommendations to help create best-in-class marketing experiences across B2B & B2C activities;-->
+<!--        Analysis of external and internal business environment: competitors, market trends, marketing, sales funnel conversions, etc.-->
+<!--      </p>-->
+<!--      <p>Develop a strategy for measuring all campaign activities, including creating and maintaining automated reporting dashboards and fulfilling ad-hoc marketing team reporting requests;-->
+<!--        Tracking marketing campaigns through all communication channels on an ongoing basis;-->
+<!--        Regularly reporting on KPIs of the marketing department and preparing reports;-->
+<!--        Providing insights and strategic recommendations to help create best-in-class marketing experiences across B2B & B2C activities;-->
+<!--        Analysis of external and internal business environment: competitors, market trends, marketing, sales funnel conversions, etc.-->
+<!--      </p>-->
+<!--    </div>-->
+<!--    <div class="actions d-flex w-100">-->
+<!--      <button class="btn me-3">-->
+<!--        <svg width="28" height="14" viewBox="0 0 28 14" fill="none" xmlns="http://www.w3.org/2000/svg">-->
+<!--          <path d="M3.27799 6.17301C3.65133 4.21301 5.49133 2.86634 7.49133 2.86634H11.398C12.0913 2.86634 12.6647 2.29301 12.6647 1.59967C12.6647 0.906341 12.0913 0.333008 11.398 0.333008H7.62466C4.14466 0.333008 1.03799 2.87967 0.704659 6.34634C0.612475 7.27198 0.71522 8.20666 1.00627 9.09017C1.29733 9.97368 1.77023 10.7864 2.39453 11.476C3.01882 12.1656 3.78065 12.7168 4.63094 13.0941C5.48122 13.4713 6.40111 13.6663 7.33133 13.6663H11.398C12.0913 13.6663 12.6647 13.093 12.6647 12.3997C12.6647 11.7063 12.0913 11.133 11.398 11.133H7.33133C6.71889 11.1311 6.11447 10.9936 5.56151 10.7303C5.00855 10.467 4.52077 10.0845 4.13323 9.61031C3.74569 9.13608 3.468 8.58189 3.32013 7.98757C3.17225 7.39325 3.15786 6.77355 3.27799 6.17301ZM9.99799 8.33301H17.998C18.7313 8.33301 19.3313 7.73301 19.3313 6.99967C19.3313 6.26634 18.7313 5.66634 17.998 5.66634H9.99799C9.26466 5.66634 8.66466 6.26634 8.66466 6.99967C8.66466 7.73301 9.26466 8.33301 9.99799 8.33301ZM20.3713 0.333008H16.598C15.9047 0.333008 15.3313 0.906341 15.3313 1.59967C15.3313 2.29301 15.9047 2.86634 16.598 2.86634H20.5047C22.5047 2.86634 24.3447 4.21301 24.718 6.17301C24.8381 6.77355 24.8237 7.39325 24.6759 7.98757C24.528 8.58189 24.2503 9.13608 23.8628 9.61031C23.4752 10.0845 22.9874 10.467 22.4345 10.7303C21.8815 10.9936 21.2771 11.1311 20.6647 11.133H16.598C15.9047 11.133 15.3313 11.7063 15.3313 12.3997C15.3313 13.093 15.9047 13.6663 16.598 13.6663H20.6647C24.558 13.6663 27.678 10.3197 27.3047 6.34634C26.9713 2.87967 23.8513 0.333008 20.3713 0.333008Z" fill="#478BF9"/>-->
+<!--        </svg>-->
+<!--      </button>-->
+<!--      <button class="cta-btn flex-grow-1">Apply this position</button>-->
+<!--    </div>-->
+<!--  </div>-->
+<!--</div>-->
 <script src="lib/splide/dist/js/splide.min.js"></script>
 <script src="index.js"></script>
 <script src="lib/Filter.js"></script>
