--- a/index.html
+++ b/index.html
@@ -400,6 +400,36 @@
   </div>
 </section>
 
+<section class="p-0 d-md-none">
+  <div class="container">
+    <div class="blog-container mt-4 d-block d-md-none">
+      <h3 class="mb-5">Blog</h3>
+      <div id="blog-mobile" class="d-flex d-md-none" data-simplebar data-simplebar-auto-hide="false" data-simplebar-click-on-track="false">
+        <div class="card tinted">
+          <div>Payment methods: Skrill, Neteller, webmoney, Bank transfer</div>
+          <small class="mt-3 d-block">10.02.2023</small>
+        </div>
+        <div class="card tinted">
+          <div>Payment methods: Skrill, Neteller, webmoney, Bank transfer</div>
+          <small class="mt-3 d-block">10.02.2023</small>
+        </div>
+        <div class="card tinted">
+          <div>Payment methods: Skrill, Neteller, webmoney, Bank transfer</div>
+          <small class="mt-3 d-block">10.02.2023</small>
+        </div>
+        <div class="card tinted">
+          <div>Payment methods: Skrill, Neteller, webmoney, Bank transfer</div>
+          <small class="mt-3 d-block">10.02.2023</small>
+        </div>
+        <div class="card tinted">
+          <div>Payment methods: Skrill, Neteller, webmoney, Bank transfer</div>
+          <small class="mt-3 d-block">10.02.2023</small>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
 <section id="events">
   <object class="bg circle-bottom d-none d-md-block" type="image/svg+xml" data="assets/backgrounds/home_events_bottom_circle.svg"></object>
   <object class="bg circle d-md-none" type="image/svg+xml" data="assets/backgrounds/home_events_circle.svg"></object>
