--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
     <h2 class="text-center">Commissions</h2>
     <p class="text-center">We have calculated and selected different types of commissions so that you can always choose the most profitable option for yourself.</p>
     <div class="content d-flex flex-column flex-md-row align-items-md-center justify-content-md-between">
-      <ul class="d-flex flex-column">
+      <ul class="d-flex flex-column mx-auto">
         <li class="card bg-transparent thick-bordered d-flex flex-column align-items-center">
           <h4>CPA</h4>
           <h3>UP TO 500 EUR</h3>
@@ -364,38 +364,38 @@
           </small>
         </li>
       </ul>
-      <div class="d-flex flex-column card thick-bordered tinted">
-        <div class="d-flex flex-column">
-          <header class="d-block">I WANT TO EARN MONTHLY</header>
-          <div class="my-3">
-            <div class="d-flex flex-column justify-content-between">
-              <div class="d-flex flex-column-reverse flex-md-row justify-content-md-between align-items-md-center">
-                <div class="filtered-content d-flex justify-content-center d-md-block">
-                  <h3 class="filter-marker" data-marker="eur">€50.000 +</h3>
-                  <h3 class="filter-marker" data-marker="btc">1.5 BTC +</h3>
-                  <h3 class="filter-marker" data-marker="usd">$35.000 +</h3>
-                </div>
-                <ul id="filters-group" class="filters d-flex bordered justify-content-between align-items-center p-2">
-                  <li><button data-filter="eur" class="btn active">EUR</button></li>
-                  <li class="mx-2"><button data-filter="btc" class="btn">BTC</button></li>
-                  <li><button data-filter="usd" class="btn">USD</button></li>
-                </ul>
-              </div>
-              <div class="d-flex justify-content-between">
-                <div class="d-flex flex-column align-items-start">
-                  <small class="d-block mt-3">Casino Profit Required</small>
-                  <small class="d-block">Commission plan</small>
-                </div>
-                <div class="d-flex flex-column align-items-end">
-                  <small class="d-block mt-3">Casino Profit Required</small>
-                  <small class="d-block">25%</small>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="cta-btn mt-4">Start earning</div>
-      </div>
+<!--      <div class="d-flex flex-column card thick-bordered tinted">-->
+<!--        <div class="d-flex flex-column">-->
+<!--          <header class="d-block">I WANT TO EARN MONTHLY</header>-->
+<!--          <div class="my-3">-->
+<!--            <div class="d-flex flex-column justify-content-between">-->
+<!--              <div class="d-flex flex-column-reverse flex-md-row justify-content-md-between align-items-md-center">-->
+<!--                <div class="filtered-content d-flex justify-content-center d-md-block">-->
+<!--                  <h3 class="filter-marker" data-marker="eur">€50.000 +</h3>-->
+<!--                  <h3 class="filter-marker" data-marker="btc">1.5 BTC +</h3>-->
+<!--                  <h3 class="filter-marker" data-marker="usd">$35.000 +</h3>-->
+<!--                </div>-->
+<!--                <ul id="filters-group" class="filters d-flex bordered justify-content-between align-items-center p-2">-->
+<!--                  <li><button data-filter="eur" class="btn active">EUR</button></li>-->
+<!--                  <li class="mx-2"><button data-filter="btc" class="btn">BTC</button></li>-->
+<!--                  <li><button data-filter="usd" class="btn">USD</button></li>-->
+<!--                </ul>-->
+<!--              </div>-->
+<!--              <div class="d-flex justify-content-between">-->
+<!--                <div class="d-flex flex-column align-items-start">-->
+<!--                  <small class="d-block mt-3">Casino Profit Required</small>-->
+<!--                  <small class="d-block">Commission plan</small>-->
+<!--                </div>-->
+<!--                <div class="d-flex flex-column align-items-end">-->
+<!--                  <small class="d-block mt-3">Casino Profit Required</small>-->
+<!--                  <small class="d-block">25%</small>-->
+<!--                </div>-->
+<!--              </div>-->
+<!--            </div>-->
+<!--          </div>-->
+<!--        </div>-->
+<!--        <div class="cta-btn mt-4">Start earning</div>-->
+<!--      </div>-->
     </div>
   </div>
 </section>
